Adm 851[Backend] fix Snoar refactor issues (#1181)
* ADM-851:[backend] fix: fix sonar by extra sort function

* ADM-851:[backend] fix: fix sonar by extra write row function

* ADM-851:[backend] fix: fix sonar by extra fixDataWithFields

* ADM-851:[backend] fix: fix sonar by extra formatAllCards

* ADM-851:[backend] fix: fix sonar by extra mapFields

* ADM-851:[backend] fix: fix Codacy

* ADM-851:[backend] fix: fix parseTotalPage enum

* ADM-851:[backend] refactor: use other way to get page number